--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Love Letter</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <script src="javascript.js"></script>
 </head>
 <body>
     <div class="container">
